# stalonetray

./: .cirrus.yml  .clang-format  .gitignore  Makefile  Makefile.am  README  README.md  TODO  about  about.html  configure.ac  configure.in  index  index.html  manpage  manpage.html  news  news.html  sitemap.txt  stalonetray.spec.in  stalonetray.xml.in  stalonetrayrc.sample.in  style.css  template.html.in  wmhints  wmhints.html
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: release.yml
ci/: Dockerfile
src/: common.h  debug.c  debug.h  embed.c  embed.h  icons.c  icons.h  image.c  image.h  kde_tray.c  kde_tray.h  layout.c  layout.h  list.h  main.c  scrollbars.c  scrollbars.h  settings.c  settings.h  tray.c  tray.h  wmh.c  wmh.h  xembed.c  xembed.h  xutils.c  xutils.h
stalonetray/branches/bugfixes/0.1/stalonetray/: Makefile.am  configure.in
stalonetray/branches/bugfixes/0.1/stalonetray/src/: icons.h  xembed.c
stalonetray/branches/bugfixes/0.7/stalonetray/: Makefile.am  NEWS  TODO  configure.in
stalonetray/branches/bugfixes/0.7/stalonetray/src/: embed.c  kde_tray.c  layout.c  main.c  settings.c  settings.h  tray.c  tray.h  wmh.c  xembed.c  xutils.c
stalonetray/branches/bugfixes/0.7/stalonetray/utils/tray-test-fdo/: main.c
stalonetray/branches/features/scrollers/: NEWS  TODO
stalonetray/branches/release-0_1-bugfixes/stalonetray/: TODO
stalonetray/branches/release-0_6_1real-bugfixes/stalonetray/: TODO  configure.in
stalonetray/tags/pre_release_0_2/stalonetray/: README  TODO
stalonetray/tags/release-0.7.1/: stalonetray.spec.in
stalonetray/tags/release-0.7.1-pre0/: Makefile.am
stalonetray/tags/release-0.7.1-pre0/src/: main.c
stalonetray/tags/release-0.7.1-pre1/: PORTING  configure.in
stalonetray/tags/release-0.7.1-pre1/doc/: ICON_LIFE_CYCLE
stalonetray/tags/release-0.7.1-pre1/src/: list.h  xembed.c  xutils.h
stalonetray/tags/release-0.7.1/src/: wmh.c
stalonetray/tags/release-0.7.2/: README  configure.in
stalonetray/tags/release-0.7.2-pre0/: AUTHORS  stalonetray.xml.in  stalonetrayrc.sample.in
stalonetray/tags/release-0.7.2-pre0/src/: Makefile.am  embed.h  icons.h  image.c  kde_tray.c  layout.h  xembed.h
stalonetray/tags/release-0.7.2/src/: ISSUES  tray.h
stalonetray/tags/release-0.7.3/: BUGS  configure.in
stalonetray/tags/release-0.7.3/doc/: DEBUG-LEVELS
stalonetray/tags/release-0.7.3/src/: IDEAS  image.h  layout.c  xutils.c
stalonetray/tags/release-0.7.4/doc/: DESIGN-NOTES
stalonetray/tags/release-0.7.4/src/: common.h
stalonetray/tags/release-0.7.5/: Makefile.am  configure.in  stalonetrayrc.sample.in
stalonetray/tags/release-0.7.5/src/: main.c  xembed.c
stalonetray/tags/release-0.7.5/utils/tray-xembed-test/: common.h
stalonetray/tags/release-0.8.0/: Makefile.am  TODO  configure.in
stalonetray/tags/release-0.8.0/src/: Makefile.am  debug.h  main.c  scrollbars.c  tray.c  xutils.c
stalonetray/tags/release-0.8.1/: stalonetray.xml.in  stalonetrayrc.sample.in
stalonetray/tags/release-0.8.1/src/: debug.h  layout.h  settings.h  xembed.c  xutils.h
stalonetray/tags/release-0.8.2/: TODO  configure.ac  stalonetray.spec.in
stalonetray/tags/release-0.8.2/src/: icons.c  image.c  list.h  scrollbars.h  settings.h  tray.c
stalonetray/tags/release-0.8.3/stalonetray/: NEWS
stalonetray/tags/release-0.8beta2/: TODO  configure.in
stalonetray/tags/release-0.8beta2/src/: debug.c  main.c  wmh.h  xutils.h
stalonetray/tags/release-0_2-pre0/stalonetray/: NEWS
stalonetray/tags/release-0_2-pre1/stalonetray/: BUGS  TODO  configure.in
stalonetray/tags/release-0_2/stalonetray/: BUGS  NEWS  configure.in
stalonetray/tags/release-0_2_c/stalonetray/: configure.in
stalonetray/tags/release-0_2_d/stalonetray/: NEWS
stalonetray/tags/release-0_3-pre1/stalonetray/: AUTHORS  NEWS  TODO
stalonetray/tags/release-0_3-pre2/stalonetray/: TODO
stalonetray/tags/release-0_3-pre3/stalonetray/: README  TODO
stalonetray/tags/release-0_3-pre4/stalonetray/: TODO
stalonetray/tags/release-0_3-pre5/stalonetray/: NEWS  README
stalonetray/tags/release-0_3-pre6/stalonetray/: BUGS  NEWS  TODO
stalonetray/tags/release-0_3/stalonetray/: README
stalonetray/tags/release-0_3_1-pre0/stalonetray/: TODO  configure.in
stalonetray/tags/release-0_3_1-pre0/stalonetray/src/: Makefile.am  icons.h  layout.c  main.c  settings.c  settings.h  tray.c  wmh.c  xembed.c  xembed.h  xutils.c  xutils.h
stalonetray/tags/release-0_3r0/stalonetray/: TODO  configure.in
stalonetray/tags/release-0_3r0/stalonetray/src/: Makefile.am  debug.h  main.c  tray.c  tray.h
stalonetray/tags/release-0_4-cvs0/stalonetray/: configure.in
stalonetray/tags/release-0_4-cvs1/stalonetray/: NEWS  TODO
stalonetray/tags/release-0_4-cvs2/stalonetray/: TODO  configure.in
stalonetray/tags/release-0_4/stalonetray/: NEWS  PORTING  TODO  configure.in
stalonetray/tags/release-0_4a/stalonetray/: AUTHORS  Makefile.am  NEWS  TODO
stalonetray/tags/release-0_4a/stalonetray/src/: common.h  debug.h  icons.c  list.h  settings.h  tray.c  wmh.c  xembed.c
stalonetray/tags/release-0_6-pre0/stalonetray/: NEWS  TODO
stalonetray/tags/release-0_6-pre1/stalonetray/: Makefile.am  NEWS  TODO  configure.in
stalonetray/tags/release-0_6-pre2/stalonetray/: NEWS  TODO  configure.in
stalonetray/tags/release-0_6-pre3/stalonetray/: configure.in
stalonetray/tags/release-0_6-pre4/stalonetray/: configure.in
stalonetray/tags/release-0_6-pre4/stalonetray/src/: debug.c  icons.c
stalonetray/tags/release-0_6/stalonetray/: NEWS  TODO
stalonetray/tags/release-0_6_1real/stalonetray/: Makefile.am  NEWS  configure.in
stalonetray/tags/release-0_6_1real/stalonetray/src/: main.c  xembed.h  xutils.c
stalonetray/tags/release-0_7-pre0/stalonetray/: TODO
stalonetray/trunk/stalonetray/: Makefile.am  NEWS  README  TODO  configure.ac  configure.in  stalonetray.xml.in  stalonetrayrc.sample.in
utils/get_props/: main.c
utils/py-gtk-example/: LICENSE  README.md  gtk-example.glade  gtk-example.py
utils/tray-test-fdo/: main.c  xembed.c  xembed.h
utils/tray-test-gtk/: traytest
utils/tray-xembed-test/: main.c
(+351 files in other folders)
