#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_INIT
AM_CONFIG_HEADER(src/config.h)
AC_CONFIG_SRCDIR(src/main.c)
AM_INIT_AUTOMAKE(stalonetray, 0.3)

AC_PROG_CC
AC_PATH_X
AC_ARG_ENABLE(native_kde,
	[  --disable-native-kde    disable native kde tray icons support],
	[ac_cv_no_native_kde="$enableval"],
	[ac_cv_no_native_kde="yes"])
AC_ARG_ENABLE(debug,
	[  --enable-debug          enable debugging output\checks],
	[ac_cv_debug="$enableval"],
	[ac_cv_debug="yes"])

case "$ac_cv_debug" in
	yes)
		AC_DEFINE(DEBUG, 1, [enable debugging code])
		CFLAGS="$CFLAGS -O0 -g -ggdb"
		LDFLAGS="$LDFLAGS -rdynamic"
	;;
	*)
	;;
esac

kde_tray_support="kde_tray.o"

case "$ac_cv_no_native_kde" in
	no)
		AC_DEFINE(NO_NATIVE_KDE, 1, [disable native kde tray icons support])
		kde_tray_support=""
	;;
	*)
	;;
esac


AC_HEADER_STDC
AC_CHECK_HEADERS([stdlib.h])
AC_CHECK_HEADERS([stdio.h])
AC_CHECK_HEADERS([signal.h])
AC_CHECK_HEADERS([unistd.h])
AC_CHECK_HEADERS([fnmatch.h])

x_includes="-I$x_includes"
x_libraries="-L$x_libraries -lX11"

AC_SUBST(x_includes)
AC_SUBST(x_libraries)
AC_SUBST(kde_tray_support)

AC_OUTPUT([
Makefile
src/Makefile
])
