SUBDIRS=src
man_MANS=stalonetray.1
debian_DIST=debian/control debian/rules debian/changelog\
			debian/compat debian/copyright debian/docs\
			debian/dirs debian/menu debian/manpages
EXTRA_DIST=TODO BUGS stalonetrayrc.sample stalonetray.1 stalonetray.spec $(debian_DIST)

#docdir=$(datadir)/doc/$(PACKAGE)/
#install-data-local:
#	mkdir -p $(DESTDIR)/$(docdir)
#	cp AUTHORS BUGS COPYING NEWS README stalonetrayrc.sample $(DESTDIR)/$(docdir)
