#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_INIT
AC_CONFIG_SRCDIR([src/main.c])
AM_INIT_AUTOMAKE(stalonetray, 0.1)

AC_PROG_CC
AC_PATH_X
AC_ARG_ENABLE(debug,
	[  --enable-debug          enable debugging output\checks],
	[ac_cv_debug="$enableval"],
	[ac_cv_debug="no"])

case "$ac_cv_debug" in
	yes)	CPPFLAGS="$CPPFLAGS -DDEBUG"
		CFLAGS="$CFLAGS -O0 -g -ggdb" ;;
esac

AC_HEADER_STDC
AC_CHECK_HEADERS([stdlib.h])
AC_CHECK_HEADERS([stdio.h])
AC_CHECK_HEADERS([signal.h])
AC_CHECK_HEADERS([unistd.h])

x_includes="-I$x_includes"
x_libraries="-L$x_libraries -lX11"

AC_SUBST(x_includes)
AC_SUBST(x_libraries)

AC_OUTPUT([
Makefile
src/Makefile
])
